--- a/parcial2/src/components/Login.css
+++ b/parcial2/src/components/Login.css
@@ -12,7 +12,7 @@
   padding-top: 30px;
   padding-bottom: 50px;
   border-radius: 8px;
-  background-color: white;
+  background-color: seashell;
 }
 
 .Auth-form-content {
@@ -34,18 +34,29 @@ label {
   color: rgb(34, 34, 34);
 }
 
-@font-face {
+ @font-face {
   font-family: "IndieFlower";
   src: local("IndieFlower"),
-   url("./assets/fonts/IndieFlower.ttf") format("truetype");
-  font-weight: 'normal';
- }
-
-h1 {
-  font-family: "IndieFlower";
+  url("./assets/fonts/IndieFlower.ttf") format("truetype");
 }
 
-img {
-  max-width: 100%;
-  max-height: 100%;
+.font-face {
+  font-family: "IndieFlower";
+  font-weight: bolder;
+  text-align: left;
+  font-size: 35px;
+  text-shadow: 3px 2px 4px black;
+}
+
+.image-banner {
+  width: 1260px ;
+  height: 250px
+}
+
+.text-left {
+  text-align: left;
+}
+
+.label-resized{
+  font-size: 15px;
 }
